# NeuroBloom-Engine

./: .gitignore  API_SPEC.md  README.md  bridge_server.py  build.md  docker-compose.yml  haarcascade_eye.xml  neuro_hybrid.cpp  requirements.txt  run_all.sh  test_reciever.py
Dysgraphia/: .gitignore  Dysgraphia_upploader.tsx
Kartik/Separate_Analysis/: main.py
bridge/: dysgraphia_server.py  requirements.txt  server.py  test_ws.py
core/: CMakeLists.txt
core/src/: neuro_hybrid.cpp
docs/: Comparison Slide for NeuroBloom – Figma Make.html
docs/Comparison Slide for NeuroBloom – Figma Make_files/: 3156-2e176f939802e34f.min.js.br  5121-60f64adda5b07928.min.js.br  5193-bdde5b827b6feb4f.min.js.br  8942-9748aa60308f5434.min.js.br  code_components_preview_iframe-f21923080d8e1f2f.min.js.br  compiled_wasm.js.br  figma_app__react_profile-57af898c45fd9ff7.min.css.br  import.shim.js.br  plugin-sandbox(1).html  runtime~figma_app__react_profile-cb0eec1f82957b6f.min.js.br  saved_resource.html  svg-6ca60f323e832e19.min.js.br  vendor-c9da1c768f2df8a3.min.js.br  vendor-core-c3978f7e8ed814b9.min.js.br
frontend/: package-lock.json  package.json
frontend/src/components/: Dashboard.tsx
web/: README.md
web/src/components/: Dashboard.tsx
